Fix extra padding on body

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -41,7 +41,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 }
 
 body {
-    padding-top: 50px;
+    //padding-top: 50px; // Remove padding
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
